examples/test/testpolicy9809.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9809
  namespace: namespace325
spec:
  podSelector:
    matchLabels:
      key35: value38
      key44: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value18
          key16: value43
          key23: value40
      podSelector:
        matchLabels:
          key9: value1
          key11: value41
